[gd_scene load_steps=2 format=3 uid="uid://bvkb8x6nfiosp"]

[ext_resource type="Script" path="res://round_over.gd" id="1_6mlma"]

[node name="round_over" type="Node2D"]
script = ExtResource("1_6mlma")

[node name="L_collect" type="Label" parent="."]
offset_left = 181.0
offset_top = 84.0
offset_right = 429.0
offset_bottom = 194.0
text = "Carrots collected: 0"

[node name="L_goal" type="Label" parent="."]
offset_left = 796.0
offset_top = 79.0
offset_right = 1044.0
offset_bottom = 189.0
text = "Bunny was expecting x carrots."

[node name="L_good" type="Label" parent="."]
offset_left = 178.0
offset_top = 246.0
offset_right = 426.0
offset_bottom = 356.0
text = "Bunny was satisfied."

[node name="L_bad" type="Label" parent="."]
offset_left = 770.0
offset_top = 223.0
offset_right = 1018.0
offset_bottom = 333.0
text = "You got mauled by the bunny."

[node name="B_good" type="Button" parent="."]
offset_left = 275.0
offset_top = 457.0
offset_right = 354.0
offset_bottom = 488.0
text = "Continue"

[node name="B_bad" type="Button" parent="."]
offset_left = 626.0
offset_top = 456.0
offset_right = 722.0
offset_bottom = 487.0
text = "Main Menu"

[node name="L_next_goal" type="Label" parent="."]
offset_left = 456.0
offset_top = 220.0
offset_right = 704.0
offset_bottom = 330.0
text = "Next goal is x carrots
"

[connection signal="pressed" from="B_good" to="." method="_on_b_good_pressed"]
[connection signal="pressed" from="B_bad" to="." method="_on_b_bad_pressed"]
